--- a/marvel-project/marvel-project/View/CharactersView/CharactersViewController.xib
+++ b/marvel-project/marvel-project/View/CharactersView/CharactersViewController.xib
@@ -7,9 +7,14 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CharactersViewController" customModule="marvel_project" customModuleProvider="target">
+            <connections>
+                <outlet property="collectionView" destination="5Bf-Ok-LkI" id="2ER-fj-lWR"/>
+                <outlet property="view" destination="iN0-l3-epB" id="rad-d6-00l"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CharactersView" customModule="marvel_project" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -22,10 +27,6 @@
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
-                    <connections>
-                        <outlet property="dataSource" destination="-1" id="kfc-bK-kb8"/>
-                        <outlet property="delegate" destination="-1" id="JX1-nY-6Je"/>
-                    </connections>
                 </collectionView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -36,9 +37,6 @@
                 <constraint firstAttribute="bottom" secondItem="5Bf-Ok-LkI" secondAttribute="bottom" id="abq-Vj-wRD"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <connections>
-                <outlet property="collectionView" destination="5Bf-Ok-LkI" id="F6B-ar-ffE"/>
-            </connections>
             <point key="canvasLocation" x="137.68115942028987" y="81.696428571428569"/>
         </view>
     </objects>
