--- a/marvel-project/marvel-project/View/CharacterDetailViewController/CharacterDetailViewController.xib
+++ b/marvel-project/marvel-project/View/CharacterDetailViewController/CharacterDetailViewController.xib
@@ -9,6 +9,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CharacterDetailViewController" customModule="marvel_project" customModuleProvider="target">
             <connections>
+                <outlet property="characterImage" destination="csF-x8-Zhf" id="pIn-4I-tAf"/>
+                <outlet property="descriptionLabel" destination="Fej-v4-gLL" id="lTU-5n-Vb7"/>
                 <outlet property="view" destination="iN0-l3-epB" id="fF3-2O-Nhh"/>
             </connections>
         </placeholder>
@@ -16,9 +18,39 @@
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <subviews>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0po-b4-tB5">
+                    <rect key="frame" x="8" y="44" width="398" height="316.5"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="csF-x8-Zhf">
+                            <rect key="frame" x="0.0" y="0.0" width="398" height="250"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="250" id="XJv-Je-1j3"/>
+                            </constraints>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fej-v4-gLL">
+                            <rect key="frame" x="0.0" y="258" width="398" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8VA-vH-25Y">
+                            <rect key="frame" x="0.0" y="286.5" width="398" height="30"/>
+                            <state key="normal" title="Comics"/>
+                            <connections>
+                                <action selector="seeComicsAction:" destination="-1" eventType="touchUpInside" id="ELF-RW-xG4"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                </stackView>
+            </subviews>
+            <constraints>
+                <constraint firstItem="0po-b4-tB5" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" constant="-8" id="22K-OW-Rxo"/>
+                <constraint firstItem="0po-b4-tB5" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="8" id="4Sf-2N-cgA"/>
+                <constraint firstItem="0po-b4-tB5" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="cjA-Ew-NMQ"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="139" y="117"/>
+            <point key="canvasLocation" x="137.68115942028987" y="116.51785714285714"/>
         </view>
     </objects>
 </document>
