--- a/marvel-project/marvel-project/View/ComicsViewController/View/ComicsCell.xib
+++ b/marvel-project/marvel-project/View/ComicsViewController/View/ComicsCell.xib
@@ -9,46 +9,56 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ComicsView" customModule="marvel_project" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="108"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="RUJ-FS-hKg">
-                    <rect key="frame" x="8" y="8" width="398" height="80"/>
-                    <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="LNm-zS-PAg">
-                            <rect key="frame" x="0.0" y="0.0" width="120" height="80"/>
-                            <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uOO-GR-bfE">
-                                    <rect key="frame" x="0.0" y="0.0" width="120" height="80"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="120" id="opu-KZ-7Rp"/>
-                                    </constraints>
-                                </imageView>
-                            </subviews>
-                        </stackView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Captain Marvel (2002) #25" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IkP-sQ-Hdi">
-                            <rect key="frame" x="136" y="0.0" width="262" height="20.5"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                </stackView>
-            </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <constraints>
-                <constraint firstItem="RUJ-FS-hKg" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="8" id="Bh2-fy-Ppo"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="RUJ-FS-hKg" secondAttribute="trailing" constant="8" id="X9p-1v-bLD"/>
-                <constraint firstItem="RUJ-FS-hKg" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="hTT-Tr-cox"/>
-            </constraints>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="122" id="C37-hH-PK0" customClass="ComicsCell" customModule="marvel_project" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="453" height="122"/>
+            <autoresizingMask key="autoresizingMask"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="C37-hH-PK0" id="a3e-PF-zLp">
+                <rect key="frame" x="0.0" y="0.0" width="453" height="122"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="16" id="cBL-B4-yWv">
+                        <rect key="frame" x="20" y="21" width="398" height="80"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="w07-yO-sha">
+                                <rect key="frame" x="0.0" y="0.0" width="100" height="80"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ePZ-x2-mYX">
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="80"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="d9D-3Y-TGg"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="NRJ-YX-4gu">
+                                <rect key="frame" x="116" y="0.0" width="282" height="40.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Captain Marvel (2002) #25" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Ff-84-ST1">
+                                        <rect key="frame" x="0.0" y="0.0" width="282" height="19.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Issue #1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0g3-9c-9Iv">
+                                        <rect key="frame" x="0.0" y="23.5" width="282" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="e0d-1B-XfT"/>
+                    </stackView>
+                </subviews>
+            </tableViewCellContentView>
             <connections>
-                <outlet property="nameComic" destination="IkP-sQ-Hdi" id="5xM-dl-h1b"/>
-                <outlet property="thumbComic" destination="uOO-GR-bfE" id="LmZ-Dx-3Og"/>
+                <outlet property="issueComic" destination="0g3-9c-9Iv" id="yxC-bY-1Uj"/>
+                <outlet property="nameComic" destination="1Ff-84-ST1" id="J2R-SL-VSP"/>
+                <outlet property="thumbComic" destination="ePZ-x2-mYX" id="uIK-Ua-j2g"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="89.0625"/>
-        </view>
+            <point key="canvasLocation" x="355.79710144927537" y="310.71428571428572"/>
+        </tableViewCell>
     </objects>
 </document>
