Ajusta tela de detalhes do personagem

--- a/marvel-project/marvel-project/View/ComicsViewController/View/ComicsCell.xib
+++ b/marvel-project/marvel-project/View/ComicsViewController/View/ComicsCell.xib
@@ -39,18 +39,27 @@
                                     </imageView>
                                 </subviews>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="NRJ-YX-4gu">
-                                <rect key="frame" x="116" y="0.0" width="282" height="40.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="NRJ-YX-4gu">
+                                <rect key="frame" x="116" y="0.0" width="282" height="80"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Captain Marvel (2002) #25" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Ff-84-ST1">
-                                        <rect key="frame" x="0.0" y="0.0" width="282" height="19.5"/>
-                                        <fontDescription key="fontDescription" name="SFUIDisplay-Bold" family="SF UI Display" pointSize="16"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Marvel Cinematic Universe Guidebook: The Avengers initiative (Hardcorver)" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="8" adjustsFontForContentSizeCategory="YES" id="1Ff-84-ST1">
+                                        <rect key="frame" x="0.0" y="0.0" width="282" height="24"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="SFUIDisplay-Bold" family="SF UI Display" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Issue #1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0g3-9c-9Iv">
-                                        <rect key="frame" x="0.0" y="23.5" width="282" height="17"/>
-                                        <fontDescription key="fontDescription" name="SFUIDisplay-Light" family="SF UI Display" pointSize="14"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Issue #1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" id="0g3-9c-9Iv">
+                                        <rect key="frame" x="0.0" y="35" width="282" height="17"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="SFUIDisplay-Light" family="SF UI Display" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="on sale date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" id="xL9-Gu-Byr">
+                                        <rect key="frame" x="0.0" y="63" width="282" height="17"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="SFUIDisplay-Light" family="SF UI Display" pointSize="12"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -64,6 +73,7 @@
             <connections>
                 <outlet property="issueComic" destination="0g3-9c-9Iv" id="yxC-bY-1Uj"/>
                 <outlet property="nameComic" destination="1Ff-84-ST1" id="J2R-SL-VSP"/>
+                <outlet property="onSaleDate" destination="xL9-Gu-Byr" id="eye-hs-TRO"/>
                 <outlet property="thumbComic" destination="ePZ-x2-mYX" id="uIK-Ua-j2g"/>
             </connections>
             <point key="canvasLocation" x="355.79710144927537" y="310.71428571428572"/>
