--- a/marvel-project/marvel-project/View/CharacterDetailViewController/CharacterDetailViewController.xib
+++ b/marvel-project/marvel-project/View/CharacterDetailViewController/CharacterDetailViewController.xib
@@ -9,8 +9,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CharacterDetailViewController" customModule="marvel_project" customModuleProvider="target">
             <connections>
-                <outlet property="characterImage" destination="csF-x8-Zhf" id="pIn-4I-tAf"/>
-                <outlet property="descriptionLabel" destination="Fej-v4-gLL" id="lTU-5n-Vb7"/>
+                <outlet property="customViewBackgrpund" destination="AG7-Xk-kPP" id="txs-ht-YKd"/>
+                <outlet property="imageBackground" destination="IGR-KI-Azq" id="qIs-A6-Aib"/>
                 <outlet property="view" destination="iN0-l3-epB" id="fF3-2O-Nhh"/>
             </connections>
         </placeholder>
@@ -19,35 +19,20 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0po-b4-tB5">
-                    <rect key="frame" x="8" y="44" width="398" height="316.5"/>
-                    <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="csF-x8-Zhf">
-                            <rect key="frame" x="0.0" y="0.0" width="398" height="250"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="250" id="XJv-Je-1j3"/>
-                            </constraints>
-                        </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fej-v4-gLL">
-                            <rect key="frame" x="0.0" y="258" width="398" height="20.5"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8VA-vH-25Y">
-                            <rect key="frame" x="0.0" y="286.5" width="398" height="30"/>
-                            <state key="normal" title="Comics"/>
-                            <connections>
-                                <action selector="seeComicsAction:" destination="-1" eventType="touchUpInside" id="ELF-RW-xG4"/>
-                            </connections>
-                        </button>
-                    </subviews>
-                </stackView>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IGR-KI-Azq">
+                    <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AG7-Xk-kPP">
+                    <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </view>
             </subviews>
             <constraints>
-                <constraint firstItem="0po-b4-tB5" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" constant="-8" id="22K-OW-Rxo"/>
-                <constraint firstItem="0po-b4-tB5" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="8" id="4Sf-2N-cgA"/>
-                <constraint firstItem="0po-b4-tB5" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="cjA-Ew-NMQ"/>
+                <constraint firstItem="AG7-Xk-kPP" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Dxl-hF-MNf"/>
+                <constraint firstItem="AG7-Xk-kPP" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="KUm-ag-rtt"/>
+                <constraint firstAttribute="bottom" secondItem="AG7-Xk-kPP" secondAttribute="bottom" id="cXB-zO-Dsi"/>
+                <constraint firstItem="AG7-Xk-kPP" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="elh-Yv-w42"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="137.68115942028987" y="116.51785714285714"/>
