--- a/marvel-project/marvel-project/View/CharacterDetailViewController/CharacterDetailViewController.xib
+++ b/marvel-project/marvel-project/View/CharacterDetailViewController/CharacterDetailViewController.xib
@@ -25,7 +25,7 @@
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AG7-Xk-kPP">
                     <rect key="frame" x="0.0" y="44" width="414" height="852"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                 </view>
             </subviews>
             <constraints>
