--- a/marvel-project/marvel-project/View/CharacterDetailViewController/View/DetailsView.xib
+++ b/marvel-project/marvel-project/View/CharacterDetailViewController/View/DetailsView.xib
@@ -43,7 +43,7 @@
                     </subviews>
                 </stackView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
                 <constraint firstItem="bfe-J1-q8B" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="5jz-QD-sw9"/>
                 <constraint firstItem="bfe-J1-q8B" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="Dzg-ZO-pUG"/>
